--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,75 @@ consul:
     - "8500:8500"
     dns: 127.0.0.1
 
+zkui:
+    extends:
+      file: base.yml
+      service: base
+    hostname: zkui
+    container_name: zkui
+    image: qnib/zkui
+    links:
+    - zookeeper:zookeeper
+    - consul:consul
+    ports:
+    - 9090:9090
+    privileged: true
+
+zookeeper:
+    extends:
+      file: base.yml
+      service: base
+    hostname: zookeeper
+    container_name: zookeeper
+    image: qnib/zookeeper
+    links:
+    - consul:consul
+
+kafkaMonitor:
+    extends:
+      file: base.yml
+      service: base
+    image: qnib/kafka-monitor
+    hostname: kafka-monitor
+    container_name: kafka-monitor
+    environment:
+     - FORWARD_TO_KAFKA=false
+    links:
+     - consul:consul
+     - kafka:kafka
+    ports:
+     - 8080:8080
+
+kafkaMgr:
+    extends:
+      file: base.yml
+      service: base
+    image: qnib/kafka-manager
+    hostname: kafka-manager
+    container_name: kafka-manager
+    links:
+     - consul:consul
+     - kafka:kafka
+    ports:
+     - 9000:9000
+
+kafka:
+    extends:
+      file: base.yml
+      service: base
+    image: qnib/kafka
+    environment:
+     - FORWARD_TO_KAFKA=true
+     - SKIP_PSWATCH=true
+    environment:
+    - BARE_HOST=kafka
+    - KAFKA_MIN_INSTANCES=1
+    hostname: kafka
+    container_name: kafka
+    links:
+     - zookeeper:zookeeper
+     - consul:consul
+
 samza:
     hostname: samza
     container_name: samza
@@ -17,6 +86,7 @@ samza:
     image: qnib/samza
     environment:
     - DC_NAME=dc1
+    - /data/hadoopdata/logs/
     links:
     - consul:consul
     ports:
