--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,16 @@
 consul:
+    extends:
+      file: base.yml
+      service: base
     hostname: consul
     container_name: consul
     image: qnib/consul
     environment:
-    - DC_NAME=dc1
     - RUN_SERVER=true
     - BOOTSTRAP_CONSUL=true
+    - FORWARD_TO_KAFKA=false
     ports:
     - "8500:8500"
-    dns: 127.0.0.1
 
 zkui:
     extends:
@@ -18,21 +20,9 @@ zkui:
     container_name: zkui
     image: qnib/zkui
     links:
-    - zookeeper:zookeeper
     - consul:consul
     ports:
     - 9090:9090
-    privileged: true
-
-zookeeper:
-    extends:
-      file: base.yml
-      service: base
-    hostname: zookeeper
-    container_name: zookeeper
-    image: qnib/zookeeper
-    links:
-    - consul:consul
 
 kafkaMonitor:
     extends:
@@ -41,13 +31,11 @@ kafkaMonitor:
     image: qnib/kafka-monitor
     hostname: kafka-monitor
     container_name: kafka-monitor
-    environment:
-     - FORWARD_TO_KAFKA=false
     links:
-     - consul:consul
-     - kafka:kafka
+    - consul:consul
+    - samza:kafka
     ports:
-     - 8080:8080
+    - 8080:8080
 
 kafkaMgr:
     extends:
@@ -56,42 +44,29 @@ kafkaMgr:
     image: qnib/kafka-manager
     hostname: kafka-manager
     container_name: kafka-manager
-    links:
-     - consul:consul
-     - kafka:kafka
+    environment:
+    - APPLICATION_SECRET=letmein
     ports:
-     - 9000:9000
+    - 9000:9000
+    volumes:
+    - ./conf/:/kafka-manager-1.2.7/conf/
+    links:
+    - consul:consul
+    - samza:zookeeper
 
-kafka:
+
+samza:
     extends:
       file: base.yml
       service: base
-    image: qnib/kafka
-    environment:
-     - FORWARD_TO_KAFKA=true
-     - SKIP_PSWATCH=true
-    environment:
-    - BARE_HOST=kafka
-    - KAFKA_MIN_INSTANCES=1
-    hostname: kafka
-    container_name: kafka
-    links:
-     - zookeeper:zookeeper
-     - consul:consul
-
-samza:
     hostname: samza
     container_name: samza
-    dns: 127.0.0.1
-    image: qnib/samza
-    environment:
-    - DC_NAME=dc1
-    - /data/hadoopdata/logs/
+    image: qnib/samza-mono
+    environment: 
+     - YARN_LOG_DIR=/data/hadoopdata/logs/
     links:
     - consul:consul
     ports:
     - 8042:8042
     - 8088:8088
     - 50070:50070
-    privileged: true
-
